--- a/.github/workflows/MirrorSync.yml
+++ b/.github/workflows/MirrorSync.yml
@@ -16,6 +16,6 @@ jobs:
         run: |
           git fetch --unshallow
           git checkout master
-          git remote add gitea https://${{ secrets.GITEA_USERNAME }}:${{ secrets.GITEA_PASSWORD }}@https://git.bili33.top/425625/wyycg-AutoCheckin.git   
+          git remote add gitea https://${{ secrets.GITEA_USERNAME }}:${{ secrets.GITEA_PASSWORD }}@git.bili33.top/425625/wyycg-AutoCheckin.git   
           git push gitea master          
 
